# simple-traffic-lights-component

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  kubernetes.md
jsons/: 2x2.json
kubernetes-deployment/: Makefile  deployment-2x2.yml  namespace.json  pod.yml  statefulset-new.yml  statefulset.yml  storage.yml
kubernetes-deployment/configmaps/: configmap.cluster-formation.yml  configmap.default-vhost.yml  configmap.enabled-plugins.yml  configmap.total-memory-available-override-value.yml
kubernetes-deployment/roles/: role.yml  rolebinding.yml  secret.default-pass.yml  secret.default-user.yml  secret.erlang-cookie.yml
kubernetes-deployment/services/: service.reliable-rabbit-public.yml
src/: main.cpp
src/controller/: TLSController.cpp  TLSController.h  TLSController_old.cpp
src/exceptions/: Exceptions.h
src/message/: DefaultMessage.h  ErrorMessage.h  Message.h  ValidMessage.h
src/model/: Model.cpp  Model.h
src/parser/: InputParser.hpp
